plugins {
	id 'org.springframework.boot' version '2.4.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	//id 'eclipse'
}

group = 'hstools'
version = '0.0.1-SNAPSHOT'
sourceCompatibility ='12'
//targetCompatibility ='8'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
//implementation 'com.vaadin:vaadin-spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter'
//implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation ('org.springframework.boot:spring-boot-starter-web')
	// {
	// 	// tomcat conflict with google-oauth-client-jetty
	// 	exclude module :'spring-boot-starter-tomcat' 
	// }
	testImplementation('org.springframework.boot:spring-boot-starter-test')
//		implementation 'org.modelmapper:modelmapper:3.0.0'
//	{
//		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
//	}

//implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
//  Only add if you're using the Embedded driver
//implementation 'org.neo4j:neo4j:3.5.14'//4.0.6'//3.4.16'//3.2.12'//
//implementation 'org.neo4j:neo4j-ogm-embedded-driver:3.2.4' // Only add if you're using the Embedded driver
	
    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'com.google.guava:guava:23.0'
    implementation 'net.sf.supercsv:super-csv:2.2.0'
    implementation 'org.aspectj:aspectjrt:1.8.10'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	//implementation 'org.kie.modules:org-apache-commons-lang3:6.1.0.Final'
	implementation 'org.jsoup:jsoup:1.7.3'
	
	implementation 'com.google.api-client:google-api-client:1.23.0'
    implementation ('com.google.oauth-client:google-oauth-client-jetty:1.23.0') {
  		exclude group: 'org.mortbay.jetty', module: 'servlet-api'
	}
    implementation 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'

    compileOnly 'org.projectlombok:lombok:1.18.6'
	annotationProcessor 'org.projectlombok:lombok:1.18.6'

	implementation group: 'nz.ac.waikato.cms.weka', name: 'weka-stable', version: '3.8.4'
}

test {
	useJUnitPlatform()
}
